# lcp-svc-update

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/core/: env.rs  lcp.rs  mod.rs
src/utils/: mod.rs  scraper.rs
