[package]
name = "lcp-svc-update"
version = "0.1.0"
edition = "2021"
authors = ["Peter Richards"]
description = "Update Liferay Cloud service Docker image references (LCP.json)."

[dependencies]
# CLI Argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP client & HTML parsing
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"

# Error handling
anyhow = "1.0"

# Configuration & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"    # Timestamps for logs/backups

[dev-dependencies]
# Required for the unit tests in src/core/env.rs
tempfile = "3.8"